<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<View
    android:id="@+id/toastView11"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    ></View>
            <TextView
                android:id="@+id/Title_of_the_Test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_you_understand_how_self_driving_cars_work"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textStyle="bold" />

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAlignBottom="false"
                android:src="@drawable/sdc1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/_1_how_do_you_think_the_cars_see_things_in_the_world"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="?android:attr/textColorPrimary" />

            <ImageView
                android:id="@+id/question_1_checkmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:srcCompat="@drawable/question_is_right" />

            <RadioGroup
                android:id="@+id/see_things_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:longClickable="false"
                android:nestedScrollingEnabled="false">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/x_ray" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/thermal_imaging" />

                <RadioButton
                    android:id="@+id/sonar_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/sonar" />

                <RadioButton
                    android:id="@+id/lidar_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/lidar" />

            </RadioGroup>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:text="@string/_2_self_driving_cars_can"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="?android:attr/textColorPrimary" />

            <ImageView
                android:id="@+id/question_2_checkmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:srcCompat="@drawable/question_is_right" />

            <CheckBox
                android:id="@+id/stop_at_red_lights"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/stop_at_red_lights" />

            <CheckBox
                android:id="@+id/slow_at_yellow_lights"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/slow_at_yellow_lights" />

            <CheckBox
                android:id="@+id/go_anywhere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/go_anywhere_at_anytime" />

            <CheckBox
                android:id="@+id/remember_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/remember_things_about_streets" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:text="@string/_3_where_are_the_most_self_driving_cars_driving_as_of_march_2018"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="?android:attr/textColorPrimary" />

            <ImageView
                android:id="@+id/question_3_checkmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:srcCompat="@drawable/question_is_right" />

            <RadioGroup
                android:id="@+id/most_cars_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:longClickable="false"
                android:nestedScrollingEnabled="false">

                <RadioButton
                    android:id="@+id/california_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/california" />

                <RadioButton
                    android:id="@+id/arizona_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/arizona" />

                <RadioButton
                    android:id="@+id/new_york_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/new_york" />

                <RadioButton
                    android:id="@+id/texas_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/texas" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:text="@string/_4_how_many_self_driving_car_permits_are_issued_in_california_as_of_march_2018"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="?android:attr/textColorPrimary" />

            <ImageView
                android:id="@+id/question_4_checkmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:srcCompat="@drawable/question_is_right" />


            <EditText
                android:id="@+id/number_of_self_driving_cars_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:ems="10"
                android:hint="@string/enter_a_number"
                android:inputType="number"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:selectAllOnFocus="false" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:text="@string/_5_in_the_future_self_driving_cars_can_help"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="?android:attr/textColorPrimary" />

            <ImageView
                android:id="@+id/question_5_checkmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:srcCompat="@drawable/question_is_right" />

            <CheckBox
                android:id="@+id/question_5_answer_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/reduce_the_numbe_of_car_accidents_per_year" />

            <CheckBox
                android:id="@+id/question_5_answer_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/blind_and_deaf_people_get_places" />

            <CheckBox
                android:id="@+id/question_5_wrong_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/cut_back_on_energy_usage" />

            <CheckBox
                android:id="@+id/question_5_wrong_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/replace_all_race_car_drivers" />

            <Button
                android:id="@+id/submit_button"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="displayScore"
                android:text="@string/submit" />

        </LinearLayout>




    </ScrollView>


